--- a/index.html
+++ b/index.html
@@ -19,21 +19,6 @@
         stdout: { write: () => {} },
         stderr: { write: () => {} }
       };
-      
-      window.addEventListener('error', function(event) {
-        const root = document.getElementById('root');
-        if (root && (root.innerHTML === '' || root.children.length === 0)) {
-          root.innerHTML = `
-            <div style="display: flex; align-items: center; justify-content: center; height: 100vh; font-family: sans-serif; background: #09090b; color: white;">
-              <div style="background: #18181b; padding: 40px; border-radius: 12px; border: 1px solid #27272a; text-align: center; max-width: 400px;">
-                <h1 style="font-size: 20px; font-weight: 600; margin-bottom: 12px; color: #f4f4f5;">System Integrity Compromised</h1>
-                <p style="color: #a1a1aa; margin-bottom: 24px; font-size: 14px; line-height: 1.5;">A module resolution error occurred during boot. This usually indicates a dependency mismatch.</p>
-                <button onclick="location.reload()" style="background: #3b82f6; color: white; border: none; padding: 10px 20px; border-radius: 6px; font-weight: 500; cursor: pointer; font-size: 14px;">Reinitialize Uplink</button>
-              </div>
-            </div>
-          `;
-        }
-      }, true);
     </script>
     <script src="https://cdn.tailwindcss.com?plugins=typography,forms"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -47,51 +32,49 @@
             },
             colors: { 
               brand: {
-                primary: '#3b82f6',
+                primary: '#4f46e5',
                 secondary: '#6366f1',
-                accent: '#8b5cf6',
+                accent: '#818cf8',
               },
-              zinc: {
-                950: '#09090b',
+              slate: {
+                25: '#fcfcfd',
               }
             },
-            borderRadius: {
-              '2xl': '1rem',
-              '3xl': '1.5rem',
+            boxShadow: {
+              'soft': '0 2px 15px -3px rgba(0, 0, 0, 0.07), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
+              'indigo-glow': '0 0 20px -5px rgba(79, 70, 229, 0.15)',
             }
           }
         }
       }
     </script>
     <style>
-      ::-webkit-scrollbar { width: 6px; height: 6px; }
+      ::-webkit-scrollbar { width: 5px; height: 5px; }
       ::-webkit-scrollbar-track { background: transparent; }
-      ::-webkit-scrollbar-thumb { background: #3f3f46; border-radius: 10px; }
-      ::-webkit-scrollbar-thumb:hover { background: #52525b; }
+      ::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
+      ::-webkit-scrollbar-thumb:hover { background: #cbd5e1; }
       body { 
         -webkit-font-smoothing: antialiased; 
         -moz-osx-font-smoothing: grayscale;
         margin: 0; 
-        background: #09090b; 
-        color: #f4f4f5;
+        background: #f8fafc; 
+        color: #0f172a;
         overflow: hidden; 
       }
-      .glass {
-        background: rgba(24, 24, 27, 0.7);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
+      .executive-glass {
+        background: rgba(255, 255, 255, 0.85);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
       }
-      .pro-border {
-        border: 1px solid rgba(63, 63, 70, 0.4);
+      .pro-card {
+        background: #ffffff;
+        border: 1px solid #e2e8f0;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
       }
-      .shimmer {
-        background: linear-gradient(90deg, transparent, rgba(255,255,255,0.05), transparent);
-        background-size: 200% 100%;
-        animation: shimmer 2s infinite;
-      }
-      @keyframes shimmer {
-        0% { background-position: -200% 0; }
-        100% { background-position: 200% 0; }
+      .pro-card:hover {
+        border-color: #cbd5e1;
+        box-shadow: 0 4px 20px -5px rgba(0,0,0,0.05);
       }
     </style>
     <script type="importmap">
@@ -119,8 +102,8 @@
     "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@6.8.0",
     "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.1",
     "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
