feat(ui): Improve visual rendering and voice assistant
Refine CSS to prevent horizontal overflow on the main page.
Update Voice Assistant component to use `useCallback` for API key checking and link handling, improving performance and adherence to React best practices. Also, ensure session starts automatically after linking an API key.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         margin: 0; 
         background: #f8fafc; 
         color: #0f172a;
-        overflow: hidden; 
+        overflow-x: hidden; 
       }
       .executive-glass {
         background: rgba(255, 255, 255, 0.85);
