feat: Refine UI and agent capabilities
Updates the application title to "Connect AI | Agentic Workspace" and adjusts styling for a cleaner aesthetic. Removes unused color definitions and hover effects from UI components.

Introduces the `Zap` icon as a replacement for `Sparkles` in the navigation and voice assistant to better represent agent actions. Removes the `createProject` and `syncWorkspaceContext` function declarations from the voice assistant as these are now managed elsewhere.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First Projects Connect</title>
+    <title>Connect AI | Agentic Workspace</title>
     <!-- Essential environment shims -->
     <script>
       window.global = window;
@@ -35,9 +35,6 @@
                 primary: '#4f46e5',
                 secondary: '#6366f1',
                 accent: '#818cf8',
-              },
-              slate: {
-                25: '#fcfcfd',
               }
             }
           }
@@ -51,11 +48,8 @@
       ::-webkit-scrollbar-thumb:hover { background: #cbd5e1; }
       body { 
         -webkit-font-smoothing: antialiased; 
-        -moz-osx-font-smoothing: grayscale;
-        margin: 0; 
         background: #f8fafc; 
         color: #0f172a;
-        overflow-x: hidden; 
       }
       .executive-glass {
         background: rgba(255, 255, 255, 0.85);
@@ -67,10 +61,6 @@
         border: 1px solid #e2e8f0;
         box-shadow: 0 1px 3px rgba(0,0,0,0.05);
         transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-      }
-      .pro-card:hover {
-        border-color: #cbd5e1;
-        box-shadow: 0 4px 20px -5px rgba(0,0,0,0.05);
       }
     </style>
     <script type="importmap">
