feat: Update branding and UI to enterprise focus
Refactor the application's branding from "Connect AI | iOS Edition" to "First Projects Connect | Professional Enterprise Workspace". This involves updating the title, color palettes, and UI component styles to align with a more professional and enterprise-oriented aesthetic.

Key changes include:
- Redefined Tailwind CSS theme colors to system-oriented names and values.
- Updated component styles (e.g., NavItem to SidebarItem, MetricCard to StatWidget) with new class names and visual treatments.
- Adjusted scrollbar styles for a more subtle appearance.
- Renamed specific icons and updated their usage in various components to better reflect enterprise functionalities.
- Updated placeholder project descriptions to align with the enterprise theme.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Connect AI | iOS Edition</title>
-    <!-- Essential environment shims -->
+    <title>First Projects Connect | Professional Enterprise Workspace</title>
     <script>
       window.global = window;
       window.process = window.process || { 
@@ -31,66 +30,66 @@
               mono: ['"JetBrains Mono"', 'monospace'] 
             },
             colors: { 
-              ios: {
-                blue: '#007AFF',
-                indigo: '#5856D6',
-                gray: '#F2F2F7',
-                'gray-dark': '#8E8E93',
+              system: {
+                primary: '#4F46E5',
+                background: '#F8FAFC',
+                sidebar: '#0F172A',
                 surface: '#FFFFFF',
-                label: '#000000',
+                border: '#E2E8F0',
+                accent: '#6366F1'
               }
-            },
-            borderRadius: {
-              'ios': '2rem',
-              'ios-lg': '2.5rem',
             }
           }
         }
       }
     </script>
     <style>
-      ::-webkit-scrollbar { width: 4px; height: 4px; }
+      ::-webkit-scrollbar { width: 5px; height: 5px; }
       ::-webkit-scrollbar-track { background: transparent; }
-      ::-webkit-scrollbar-thumb { background: rgba(0,0,0,0.1); border-radius: 10px; }
+      ::-webkit-scrollbar-thumb { background: #CBD5E1; border-radius: 10px; }
       
       body { 
         -webkit-font-smoothing: antialiased; 
-        background-color: #F2F2F7;
-        color: #000000;
-        overflow: hidden;
+        background-color: #F8FAFC;
+        color: #0F172A;
       }
 
-      .ios-glass {
-        background: rgba(255, 255, 255, 0.7);
-        backdrop-filter: blur(25px) saturate(180%);
-        -webkit-backdrop-filter: blur(25px) saturate(180%);
-        border: 1px solid rgba(255, 255, 255, 0.3);
+      .system-sidebar {
+        background-color: #0F172A;
+        border-right: 1px solid rgba(255,255,255,0.05);
       }
 
-      .ios-card {
+      .card-system {
         background: #FFFFFF;
-        border-radius: 2rem;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.04);
-        transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.2s;
+        border: 1px solid #E2E8F0;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.05);
+        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
       }
-      .ios-card:active {
-        transform: scale(0.98);
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.02);
-      }
-
-      .btn-tactile {
-        transition: transform 0.1s cubic-bezier(0, 0, 0.2, 1);
-      }
-      .btn-tactile:active {
-        transform: scale(0.94);
+      .card-system:hover {
+        border-color: #CBD5E1;
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.05);
       }
 
-      @keyframes orb-float {
-        0%, 100% { transform: translateY(0) scale(1); filter: blur(40px); }
-        50% { transform: translateY(-20px) scale(1.1); filter: blur(60px); }
+      .btn-primary {
+        background: #4F46E5;
+        color: white;
+        transition: all 0.2s;
       }
-      .assistant-orb {
-        animation: orb-float 4s infinite ease-in-out;
+      .btn-primary:hover {
+        background: #4338CA;
+        transform: translateY(-1px);
+      }
+
+      .status-dot {
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+      }
+
+      .locked-module {
+        filter: grayscale(0.8);
+        opacity: 0.7;
+        cursor: not-allowed !important;
       }
     </style>
     <script type="importmap">
@@ -120,8 +119,8 @@
     "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.3.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.0"
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
