--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First Projects Connect | Professional Enterprise Workspace</title>
+    <title>First Projects Connect | Professional Workspace Ecosystem</title>
     <script>
       window.global = window;
       window.process = window.process || { 
@@ -20,23 +20,24 @@
       };
     </script>
     <script src="https://cdn.tailwindcss.com?plugins=typography,forms"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: { 
-              sans: ['"Plus Jakarta Sans"', 'sans-serif'], 
+              sans: ['"Inter"', 'sans-serif'],
+              display: ['"Plus Jakarta Sans"', 'sans-serif'],
               mono: ['"JetBrains Mono"', 'monospace'] 
             },
             colors: { 
-              system: {
-                primary: '#4F46E5',
-                background: '#F8FAFC',
-                sidebar: '#0F172A',
-                surface: '#FFFFFF',
-                border: '#E2E8F0',
-                accent: '#6366F1'
+              workspace: {
+                bg: '#FFFFFF',
+                sidebar: '#F9FAFB',
+                accent: '#111827',
+                border: '#E5E7EB',
+                muted: '#6B7280',
+                indigo: '#4F46E5'
               }
             }
           }
@@ -44,87 +45,98 @@
       }
     </script>
     <style>
-      ::-webkit-scrollbar { width: 5px; height: 5px; }
+      ::-webkit-scrollbar { width: 6px; height: 6px; }
       ::-webkit-scrollbar-track { background: transparent; }
-      ::-webkit-scrollbar-thumb { background: #CBD5E1; border-radius: 10px; }
+      ::-webkit-scrollbar-thumb { background: #E5E7EB; border-radius: 10px; }
       
       body { 
         -webkit-font-smoothing: antialiased; 
-        background-color: #F8FAFC;
-        color: #0F172A;
+        background-color: #FFFFFF;
+        color: #111827;
+        font-family: 'Inter', sans-serif;
       }
 
-      .system-sidebar {
-        background-color: #0F172A;
-        border-right: 1px solid rgba(255,255,255,0.05);
+      .sidebar-border {
+        border-right: 1px solid #F3F4F6;
       }
 
-      .card-system {
+      .card-professional {
         background: #FFFFFF;
-        border: 1px solid #E2E8F0;
-        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.05);
+        border: 1px solid #F3F4F6;
         transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
       }
-      .card-system:hover {
-        border-color: #CBD5E1;
-        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.05);
+      .card-professional:hover {
+        border-color: #E5E7EB;
+        box-shadow: 0 4px 12px -2px rgba(0, 0, 0, 0.03);
       }
 
-      .btn-primary {
-        background: #4F46E5;
-        color: white;
-        transition: all 0.2s;
+      .btn-workspace {
+        transition: all 0.15s ease;
       }
-      .btn-primary:hover {
-        background: #4338CA;
-        transform: translateY(-1px);
+      .btn-workspace:active {
+        transform: scale(0.98);
       }
 
-      .status-dot {
-        width: 8px;
-        height: 8px;
-        border-radius: 50%;
+      .coming-soon-lock {
+        position: relative;
+        overflow: hidden;
+      }
+      .coming-soon-lock::after {
+        content: "Coming Soon";
+        position: absolute;
+        inset: 0;
+        background: rgba(255, 255, 255, 0.85);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 10px;
+        font-weight: 800;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        color: #111827;
+        opacity: 0;
+        transition: opacity 0.2s;
+        z-index: 10;
+        pointer-events: none;
+      }
+      .coming-soon-lock:hover::after {
+        opacity: 1;
       }
 
-      .locked-module {
-        filter: grayscale(0.8);
-        opacity: 0.7;
-        cursor: not-allowed !important;
+      .system-gradient {
+        background: linear-gradient(135deg, #4F46E5 0%, #111827 100%);
       }
     </style>
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react/jsx-runtime": "https://esm.sh/react@19.0.0/jsx-runtime",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@19.0.0",
-    "recharts": "https://esm.sh/recharts@2.13.3?deps=react@19.0.0,react-dom@19.0.0",
-    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.46.1",
-    "codemirror": "https://esm.sh/codemirror@6.0.1",
-    "@codemirror/view": "https://esm.sh/@codemirror/view@6.34.1",
-    "@codemirror/state": "https://esm.sh/@codemirror/state@6.4.1",
-    "@codemirror/commands": "https://esm.sh/@codemirror/commands@6.7.1",
-    "@codemirror/search": "https://esm.sh/@codemirror/search@6.5.6",
-    "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@6.1.2",
-    "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@6.2.2",
-    "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@6.1.6",
-    "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@6.4.9",
-    "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@6.3.0",
-    "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@6.0.1",
-    "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@6.8.0",
-    "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@6.0.1",
-    "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@6.3.1",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@^6.2.4",
+    "@codemirror/state": "https://esm.sh/@codemirror/state@^6.5.2",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
+    "@codemirror/view": "https://esm.sh/@codemirror/view@^6.39.4",
+    "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@^6.4.11",
+    "@codemirror/search": "https://esm.sh/@codemirror/search@^6.5.11",
+    "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@^6.5.0",
+    "codemirror": "https://esm.sh/codemirror@^6.0.2",
+    "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@^6.0.2",
+    "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@^6.1.3",
+    "@codemirror/commands": "https://esm.sh/@codemirror/commands@^6.10.1",
+    "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@^6.3.1",
+    "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@^6.10.0",
+    "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@^6.0.2",
+    "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@^6.2.1"
   }
 }
 </script>
-  </head>
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="index.tsx" crossorigin="anonymous"></script>
