--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First Projects Connect | Industrial Ecosystem</title>
+    <title>Connect Studio | Zen Workspace</title>
     <script>
       window.global = window;
       window.process = window.process || { 
@@ -31,59 +31,65 @@
               mono: ['"JetBrains Mono"', 'monospace'] 
             },
             colors: { 
-              workspace: {
-                bg: '#FFFFFF',
-                sidebar: '#F9FAFB',
-                accent: '#111827',
-                border: '#E5E7EB',
-                muted: '#6B7280',
-                yellow: '#EAB308' 
+              studio: {
+                bg: '#F8FAFC',
+                sidebar: '#FFFFFF',
+                accent: '#10B981',
+                text: '#0F172A',
+                border: '#F1F5F9',
+                muted: '#64748B'
               }
+            },
+            borderRadius: {
+              '4xl': '2rem',
+              '5xl': '2.5rem',
             }
           }
         }
       }
     </script>
     <style>
-      ::-webkit-scrollbar { width: 6px; height: 6px; }
+      ::-webkit-scrollbar { width: 5px; height: 5px; }
       ::-webkit-scrollbar-track { background: transparent; }
-      ::-webkit-scrollbar-thumb { background: #E5E7EB; border-radius: 10px; }
+      ::-webkit-scrollbar-thumb { background: #E2E8F0; border-radius: 10px; }
       
       body { 
         -webkit-font-smoothing: antialiased; 
-        background-color: #FFFFFF;
-        color: #111827;
+        background-color: #F8FAFC;
+        color: #0F172A;
         font-family: 'Inter', sans-serif;
       }
 
-      .sidebar-border {
-        border-right: 1px solid #F3F4F6;
+      .glass-card {
+        background: rgba(255, 255, 255, 0.8);
+        backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.5);
       }
 
-      .card-professional {
-        background: #FFFFFF;
-        border: 1px solid #F3F4F6;
-        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-      }
-      .card-professional:hover {
-        border-color: #EAB308;
-        box-shadow: 0 10px 25px -5px rgba(234, 179, 8, 0.05);
-      }
-
-      .btn-workspace {
-        transition: all 0.15s ease;
-      }
-      .btn-workspace:active {
-        transform: scale(0.98);
-      }
-
-      .system-gradient {
-        background: linear-gradient(135deg, #EAB308 0%, #111827 100%);
+      .studio-shadow {
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -2px rgba(0, 0, 0, 0.05);
       }
       
-      .text-yellow-brand { color: #EAB308; }
-      .bg-yellow-brand { background-color: #EAB308; }
-      .border-yellow-brand { border-color: #EAB308; }
+      .studio-shadow-hover:hover {
+        box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.05), 0 8px 10px -6px rgba(0, 0, 0, 0.05);
+      }
+
+      .btn-tactile {
+        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      .btn-tactile:active {
+        transform: scale(0.96);
+      }
+
+      .animate-float {
+        animation: float 6s ease-in-out infinite;
+      }
+
+      @keyframes float {
+        0% { transform: translateY(0px); }
+        50% { transform: translateY(-10px); }
+        100% { transform: translateY(0px); }
+      }
     </style>
   <script type="importmap">
 {
