--- a/index.html
+++ b/index.html
@@ -1,128 +1,35 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Connect Studio | Zen Workspace</title>
-    <script>
-      window.global = window;
-      window.process = window.process || { 
-        env: { NODE_ENV: 'production', API_KEY: '' },
-        cwd: () => '/',
-        browser: true,
-        nextTick: (cb) => setTimeout(cb, 0),
-        version: 'v20.0.0',
-        versions: {},
-        platform: 'browser',
-        stdout: { write: () => {} },
-        stderr: { write: () => {} }
-      };
-    </script>
-    <script src="https://cdn.tailwindcss.com?plugins=typography,forms"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: { 
-              sans: ['"Inter"', 'sans-serif'],
-              display: ['"Plus Jakarta Sans"', 'sans-serif'],
-              mono: ['"JetBrains Mono"', 'monospace'] 
-            },
-            colors: { 
-              studio: {
-                bg: '#F8FAFC',
-                sidebar: '#FFFFFF',
-                accent: '#10B981',
-                text: '#0F172A',
-                border: '#F1F5F9',
-                muted: '#64748B'
-              }
-            },
-            borderRadius: {
-              '4xl': '2rem',
-              '5xl': '2.5rem',
-            }
-          }
-        }
-      }
-    </script>
-    <style>
-      ::-webkit-scrollbar { width: 5px; height: 5px; }
-      ::-webkit-scrollbar-track { background: transparent; }
-      ::-webkit-scrollbar-thumb { background: #E2E8F0; border-radius: 10px; }
-      
-      body { 
-        -webkit-font-smoothing: antialiased; 
-        background-color: #F8FAFC;
-        color: #0F172A;
-        font-family: 'Inter', sans-serif;
-      }
 
-      .glass-card {
-        background: rgba(255, 255, 255, 0.8);
-        backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.5);
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>First Projects - Connect</title>
+  <script>
+    window.global = window;
+    window.process = window.process || {
+      env: { NODE_ENV: 'production', API_KEY: '' },
+      cwd: () => '/',
+      browser: true,
+      nextTick: (cb) => setTimeout(cb, 0),
+      version: 'v20.0.0',
+      versions: {},
+      platform: 'browser',
+      stdout: { write: () => { } },
+      stderr: { write: () => { } }
+    };
+  </script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+    rel="stylesheet">
 
-      .studio-shadow {
-        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -2px rgba(0, 0, 0, 0.05);
-      }
-      
-      .studio-shadow-hover:hover {
-        box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.05), 0 8px 10px -6px rgba(0, 0, 0, 0.05);
-      }
 
-      .btn-tactile {
-        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-      }
-      .btn-tactile:active {
-        transform: scale(0.96);
-      }
 
-      .animate-float {
-        animation: float 6s ease-in-out infinite;
-      }
-
-      @keyframes float {
-        0% { transform: translateY(0px); }
-        50% { transform: translateY(-10px); }
-        100% { transform: translateY(0px); }
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "@codemirror/lang-javascript": "https://esm.sh/@codemirror/lang-javascript@^6.2.4",
-    "@codemirror/state": "https://esm.sh/@codemirror/state@^6.5.2",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
-    "@codemirror/view": "https://esm.sh/@codemirror/view@^6.39.4",
-    "@codemirror/lang-html": "https://esm.sh/@codemirror/lang-html@^6.4.11",
-    "@codemirror/search": "https://esm.sh/@codemirror/search@^6.5.11",
-    "@codemirror/lang-markdown": "https://esm.sh/@codemirror/lang-markdown@^6.5.0",
-    "codemirror": "https://esm.sh/codemirror@^6.0.2",
-    "@codemirror/lang-json": "https://esm.sh/@codemirror/lang-json@^6.0.2",
-    "@codemirror/theme-one-dark": "https://esm.sh/@codemirror/theme-one-dark@^6.1.3",
-    "@codemirror/commands": "https://esm.sh/@codemirror/commands@^6.10.1",
-    "@codemirror/lang-css": "https://esm.sh/@codemirror/lang-css@^6.3.1",
-    "@codemirror/lang-sql": "https://esm.sh/@codemirror/lang-sql@^6.10.0",
-    "@codemirror/lang-rust": "https://esm.sh/@codemirror/lang-rust@^6.0.2",
-    "@codemirror/lang-python": "https://esm.sh/@codemirror/lang-python@^6.2.1"
-  }
-}
-</script>
 </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="index.tsx" crossorigin="anonymous"></script>
-  </body>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="index.tsx" crossorigin="anonymous"></script>
+</body>
+
 </html>
